tests/errors/validation/field-at-top-level.fn
---
Description: Field declared at top level outside any type
Expected: FN2000
---

topField: i32

type Program
{
    static fn Main -> i32
    {
        return 0
    }
}
